🌟 fix: improved data fetching success rate by adding more backup services

--- a/src/app/routes/chart/chart.component.html
+++ b/src/app/routes/chart/chart.component.html
@@ -43,6 +43,7 @@
 			<app-chart-versions-section
 				#versionsSection
 				class="w-full"
+				[chartId]="chart.id"
 				[versions]="chart.versions"
 			></app-chart-versions-section>
 			<app-chart-danger-zone-section
