--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -95,10 +95,10 @@
 	@include mat.dialog-overrides(
 		(
 			subhead-size: 1.65rem,
-			actions-padding: 1.25rem 2.25rem,
+			actions-padding: 1.75rem 2.25rem,
 			content-padding: 1.25rem 2.25rem,
 			headline-padding: 1.25rem 2.25rem,
-			with-actions-content-padding: 1.25rem 2.25rem,
+			with-actions-content-padding: 0px 2.25rem,
 		)
 	);
 
