--- a/src/app/routes/chart/sections/known-issues/known-issues.component.html
+++ b/src/app/routes/chart/sections/known-issues/known-issues.component.html
@@ -2,13 +2,13 @@
 	<ul
 		class="flex flex-col items-start justify-start w-full rounded-lg bg-surface-container border border-inverse-on-surface overflow-hidden"
 	>
-		@if (knownIssues().length > 0) {
-			@for (issue of knownIssues(); track $index) {
+		@if (issues.length > 0) {
+			@for (issue of issues; track $index) {
 				<li
 					class="flex flex-row items-center justify-between w-full gap-2 font-normal px-4 py-2 text-sm"
 					[ngClass]="{
 						'border-b border-b-inverse-on-surface':
-							$index !== knownIssues.length - 1,
+							$index !== issues.length - 1,
 					}"
 				>
 					<span>• {{ issue.description }}</span>
@@ -19,10 +19,12 @@
 							matTooltipPosition="above"
 							matTooltipShowDelay="375"
 							matTooltipClass="!text-sm"
-							(click)="openCloseIssueConfirmationDialog($index)"
+							(click)="openRemoveIssueConfirmationDialog(issue)"
 						>
-							<span class="text-lg align-middle leading-none">
-								<mat-icon inline>playlist_add_check</mat-icon>
+							<span
+								class="text-lg align-middle flex items-center justify-center self-center leading-none select-none"
+							>
+								<mat-icon inline>playlist_remove</mat-icon>
 							</span>
 						</button>
 					</div>
@@ -61,13 +63,29 @@
 					<button
 						mat-raised-button
 						class="!bg-transparent"
+						[disabled]="isLoading"
 						(click)="cancelAddIssue()"
 					>
 						Cancel
 					</button>
-					<button mat-raised-button (click)="addIssue()">
-						<mat-icon>playlist_add</mat-icon>
-						Add
+					<button
+						mat-raised-button
+						[disabled]="isLoading"
+						(click)="addIssue()"
+					>
+						@if (isLoading) {
+							<mat-progress-spinner
+								mode="indeterminate"
+								diameter="16"
+							></mat-progress-spinner>
+						} @else {
+							<span
+								class="flex flex-row items-center justify-center gap-1"
+							>
+								<mat-icon>playlist_add</mat-icon>
+								Add
+							</span>
+						}
 					</button>
 				</div>
 			</li>
