🐞 fix: table sorting for number based columns

--- a/src/app/routes/chart/sections/versions/versions.component.html
+++ b/src/app/routes/chart/sections/versions/versions.component.html
@@ -6,8 +6,8 @@
 		[data]="versions"
 		[actions]="versionsActions"
 		hasSorting="true"
-		initialSortColumn="id"
-		initialSortDirection="desc"
+		initialSortColumn="index"
+		sortDirection="desc"
 	></app-table>
 	<span class="flex items-center justify-end w-full">
 		<button mat-stroked-button (click)="openAddVersionConfirmationDialog()">
