--- a/src/app/routes/chart/sections/versions/versions.component.html
+++ b/src/app/routes/chart/sections/versions/versions.component.html
@@ -10,7 +10,7 @@
 		sortDirection="desc"
 	></app-table>
 	<span class="flex items-center justify-end w-full">
-		<button mat-stroked-button (click)="openAddVersionConfirmationDialog()">
+		<button mat-stroked-button (click)="openAddVersionDialog()">
 			<mat-icon>publish</mat-icon>
 			Publish new version
 		</button>
