⚙️ refactor: updated published page layout to always show loaded data during loading

--- a/src/app/components/custom-select/custom-select.component.html
+++ b/src/app/components/custom-select/custom-select.component.html
@@ -5,6 +5,7 @@
 	role="combobox"
 	aria-controls="options-list"
 	[attr.aria-expanded]="dropdownOpen"
+	[disabled]="disabled"
 >
 	<!-- Trigger -->
 	<div
