--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -13,6 +13,8 @@
 		[placeholder]="placeholder"
 		(input)="onInput($event)"
 		[matAutocomplete]="autoComplete"
+		[disabled]="disabled"
+		[style.pointerEvents]="disabled ? 'none' : 'auto'"
 	/>
 	<ng-content></ng-content>
 </div>
