--- a/src/app/routes/chart/dialogs/confirmation/confirmation-dialog.component.html
+++ b/src/app/routes/chart/dialogs/confirmation/confirmation-dialog.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>{{ data.title }}</h2>
 <mat-dialog-content>
-	<p>{{ data.description }}</p>
+	<p [innerHTML]="data.description"></p>
 </mat-dialog-content>
 <mat-dialog-actions>
 	<button mat-button (click)="onCancel()" [disabled]="isLoading()">
