--- a/src/app/routes/chart/chart.component.html
+++ b/src/app/routes/chart/chart.component.html
@@ -9,16 +9,30 @@
 			class="flex flex-col items-start justify-start gap-9 max-md:w-full flex-1"
 		>
 			<div class="flex flex-col items-start justify-start gap-2 relative">
-				<h1 class="font-medium text-5xl items-center inline gap-4">
+				<h1
+					class="font-medium text-5xl items-center inline-block gap-4 w-full"
+				>
 					{{ chart.track }}
-					<mat-icon
-						svgIcon="deluxe"
-						inline="true"
-						class="text-on-surface !w-12 !h-12 relative"
-						style="top: 8px"
-						aria-hidden="false"
-						aria-label="Deluxe icon"
-					></mat-icon>
+					<span
+						class="relative inline-flex items-center justify-start gap-2 ml-2 md:ml-0 top-0.5 md:top-2"
+					>
+						@if (difficultyIcon) {
+							<img
+								class="w-8 h-8 flex md:hidden"
+								[src]="difficultyIcon"
+								alt="Difficulty badge icon"
+							/>
+						}
+						@if (chart.isDeluxe) {
+							<mat-icon
+								svgIcon="deluxe"
+								inline="true"
+								class="text-on-surface !w-12 !h-12 relative"
+								aria-hidden="false"
+								aria-label="Deluxe icon"
+							></mat-icon>
+						}
+					</span>
 				</h1>
 				<h2 class="text-3xl">{{ chart.artist }}</h2>
 			</div>
