--- a/src/app/routes/chart/chart.component.html
+++ b/src/app/routes/chart/chart.component.html
@@ -62,6 +62,7 @@
 				class="w-full"
 				[chartId]="chart.id"
 				[chartName]="chart.track"
+				[isPublic]="chart.isPublic"
 			></app-chart-danger-zone-section>
 		</div>
 	</main>
