--- a/src/app/routes/chart/subcomponents/aside/aside.component.html
+++ b/src/app/routes/chart/subcomponents/aside/aside.component.html
@@ -2,7 +2,7 @@
 	<div class="absolute top-0 left-0 md:relative w-full max-md:-z-10">
 		<div class="relative overflow-hidden md:rounded-lg">
 			<img
-				class="w-full opacity-50 md:opacity-100 md:w-72 lg:w-96 xl:w-[425px] aspect-square"
+				class="w-full opacity-50 md:opacity-100 md:w-72 xl:w-96 aspect-square"
 				[src]="chart.coverUrl"
 				[alt]="chart.track"
 			/>
