--- a/src/styles.css
+++ b/src/styles.css
@@ -77,6 +77,14 @@ body {
 	}
 }
 
+.filled-icon {
+	font-variation-settings:
+		"FILL" 1,
+		"wght" 400,
+		"GRAD" 0,
+		"opsz" 48;
+}
+
 .stamp-effect {
 	mask-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/8399/grunge.png");
 	-webkit-mask-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/8399/grunge.png");
