🐞 fix: loading indicator positioning on search bar

--- a/src/app/routes/published/published.component.html
+++ b/src/app/routes/published/published.component.html
@@ -17,7 +17,7 @@
 				>
 					@if (isRefreshing) {
 						<mat-progress-spinner
-							class="absolute top-1/2 -translate-y-1/2 right-12"
+							class="mr-3"
 							diameter="16"
 							mode="indeterminate"
 						></mat-progress-spinner>
