--- a/src/app/routes/link/link.component.html
+++ b/src/app/routes/link/link.component.html
@@ -49,7 +49,7 @@
 	<app-large-panel
 		class="w-full"
 		title="Don’t have the app installed?"
-		message="Check Discord to get the most recent version and simplify your experience!"
+		message="Check Discord to get the most recent version!"
 		[button]="{ label: 'Discord', link: '/' }"
 	></app-large-panel>
 </main>
