--- a/src/app/routes/chart/chart.component.html
+++ b/src/app/routes/chart/chart.component.html
@@ -66,5 +66,7 @@
 		</div>
 	</main>
 } @else {
-	error loading data
+	<app-error
+		class="flex items-center justify-center w-full min-h-[calc(100vh-7rem)] px-wrapper pt-9 pb-14"
+	></app-error>
 }
