⚙️ refactor: partial filter implementation (still needs a lot of work)

--- a/src/app/routes/published/subcomponents/month-picker/month-picker.component.html
+++ b/src/app/routes/published/subcomponents/month-picker/month-picker.component.html
@@ -6,5 +6,6 @@
 	discrete
 	[displayWith]="formatLabel.bind(this)"
 >
-	<input matSliderThumb />
+	<input matSliderStartThumb />
+	<input matSliderEndThumb />
 </mat-slider>
