--- a/src/app/routes/published/published.component.html
+++ b/src/app/routes/published/published.component.html
@@ -5,6 +5,9 @@
 		@if (charts.length > 0 || filters.length > 0) {
 			<app-filter-panel
 				class="w-full md:w-1/3 md:max-w-md"
+				[availableDifficulties]="availableDifficulties"
+				[availableGenres]="availableGenres"
+				[availableVersions]="availableVersions"
 			></app-filter-panel>
 			<div class="flex flex-col items-start justify-start gap-9 w-full">
 				<div
